=======
CHANGES
=======

0.5.5dev (unreleased)
---------------------

- added support for environment


0.5.4 (2009-02-22)
------------------

- Feature: implemented mkdir script

- Feature: implemented mkfile script

- fix tests


0.5.3 (2008-04-07)
------------------

- Bug: ``script`` ``defaults`` had a bug that prevented it from use
       renamed it to ``arguments``, now it's working


0.5.2 (unreleased)
------------------

- cleanup code, remove commented out code parts


0.5.1 (2008-01-24)
------------------

- Bug: Correct and update meta-data.


0.5.0 (2008-01-21)
------------------

- Initial Release