@@ -5,7 +5,11 @@ CHANGES
 0.5.5dev (unreleased)
 ---------------------
 
-- added support for environment
+- Added support for environment.
+
+- Fixed tests to run with current package versions.
+
+- Fixed tests to run on *nix systems (not only win).
 
 
 0.5.4 (2009-02-22)
